--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
-<html>
-    <head>
-
-    </head>
-    <body>
-        <h1>hola mundo</h1>
-        <p>bienvenidos a mi primer sitio web</p>
-        <p>Welcome To Merketblack</p>
-    </body>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mi Sitio Web</title>
+</head>
+<body>
+    <h1>Hola Mundo</h1>
+    <h2>El niño se puso en acción</h2>
+    <p>Bienvenidos a mi primer sitio web</p>
+    <p>Marketblack</p>
+</body>
 </html>
