--- a/index.html
+++ b/index.html
@@ -5,10 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi Sitio Web</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <h1>Hola Mundo</h1>
     <h2>El niño se puso en acción</h2>
+    <h3>Esta fuente no tiene serifa</h3>
     <p>Bienvenidos a mi primer sitio web</p>
     <p>Marketblack</p>
 </body>
