--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+    <h1>Hola Mundo!</h1>
     <h2>El niño se puso en acción</h2>
     <h3>Esta fuente no tiene serifa</h3>
     <p>Bienvenidos a mi primer sitio web</p>
