--- a/fuentes.html
+++ b/fuentes.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Sitio Web</title>
-    <link rel="stylesheet" href="css/style.css">
+    <title>Fuentes</title>
+    <link rel="stylesheet" href="css/fuentes.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
 </head>
 <body>
     <ul>
@@ -16,10 +15,11 @@
         <li><a href="fuentes.html"> Fuentes</a></li>
         <li><a href="listas.html">Listas</a></li>
     </ul>
-    <h1>Hola Mundo!</h1>
-    <h2>El niño se puso en acción</h2>
-   
-   
-<a href="">Ir a territorium</a>
+    <h1>Fuentes</h1>
+    <h3>Esta fuente no tiene serifa</h3>
+    <p>Bienvenidos a mi primer sitio web</p>
+    <p>Marketblack</p>
+    <p class="fuente-net">esta es una fuente almacenada localmente.</p>
+    <p class="fuente-net2">Netflix</p>
 </body>
 </html>
